fix: 修复习惯列表空关联异常